# avionics-test-bed-x-plane

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  avionics_autostart.sh  mfd-app.desktop  mfd_viewer.sh  pfd-app.desktop  pfd_qt_viewer.py  pfd_viewer.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: config.py  flight_manager.py  main.py  models.py  xplane_bridge.py  xplane_config.py
app/static/: benchmarks.html  competitive-analysis.html  compliance.html  health.html  index.html  live-map.html  synthetic-vision.html  webgl-test.html
scripts/: auto_test_flights.py
tests/: __init__.py  conftest.py  test_api.py
